--- a/package.json
+++ b/package.json
@@ -1,33 +1,19 @@
 {
   "name": "my-ecommerce-app",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@aws-amplify/auth": "^6.15.0",
-    "@aws-amplify/core": "^6.13.1",
-    "@aws-amplify/ui-react": "^6.11.2",
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.7.0",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "aws-amplify": "^6.15.5",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "@aws-amplify/ui-react": "^6.12.0",
+    "aws-amplify": "^6.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.30.1",
     "react-scripts": "^5.0.1",
-    "react-window": "^1.8.11",
-    "web-vitals": "^2.1.4"
+    "react-window": "^1.8.8"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "build": "react-scripts build"
   },
   "browserslist": {
     "production": [
